--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "changeset": "changeset",
+    "version": "changeset version",
+    "release": "changeset publish"
   },
   "packageManager": "bun@1.2.5",
   "devDependencies": {
+    "@changesets/cli": "^2.27.1",
     "@types/bun": "latest",
     "prettier": "^3.5.3"
   },
