feat: add version to package.json and update bun-debian example

--- a/examples/bun-debian/basic/compose.yaml
+++ b/examples/bun-debian/basic/compose.yaml
@@ -1,6 +1,8 @@
 services:
   app:
-    image: ghcr.io/atssj/bun-debian:1.2.5
+    build:
+      context: ../../../images/bun-debian
+      dockerfile: Dockerfile
     volumes:
       - ./:/app
     working_dir: /app
