--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,10 +1,10 @@
 {
   "$schema": "https://unpkg.com/@changesets/config@2.3.1/schema.json",
-  "changelog": ["@changesets/cli/changelog", { "repo": "atssj/tpl-docker-images" }],
+  "changelog": "@changesets/cli/changelog",
   "commit": false,
-  "fixed": [["bun-debian", "example-bun-debian-basic"]],
+  "fixed": [],
   "linked": [],
-  "access": "restricted",
+  "access": "public",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
   "ignore": []
