--- a/.github/workflows/publish-bun-debian.yml
+++ b/.github/workflows/publish-bun-debian.yml
@@ -1,53 +1,53 @@
-name: Publish Bun Debian Docker image
+name: Publish Docker Image - bun-debian
 
 on:
-  release:
-    types: [published]
   push:
-    branches: [main]
-    paths:
-      - 'images/bun-debian/**'
+    tags:
+      - '@tpl/bun@*'
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  build-and-push:
+  publish:
+    name: Build and Publish
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
 
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Log in to the Container registry
+      - name: Extract version
+        id: version
+        run: |
+          TAG=${{ github.ref_name }}
+          VERSION=${TAG#@tpl/bun@}
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+
+      - name: Login to Registry
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata (tags, labels) for Docker
+      - name: Extract metadata
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/${{ github.actor }}/bun-debian
-          flavor: |
-            latest=false
+          images: ${{ env.REGISTRY }}/${{ github.actor }}/bun
           tags: |
-            type=raw,value=1.2.5-debian
-            type=raw,value=1.2-debian
-            type=raw,value=1-debian
+            type=raw,value=${{ steps.version.outputs.version }}
             type=raw,value=latest
           labels: |
-            org.opencontainers.image.title=Bun Debian
-            org.opencontainers.image.description=Bun v1.2.5 runtime on Debian with development tools
-            org.opencontainers.image.version=1.2.5-debian
+            org.opencontainers.image.title=Bun on Debian
+            org.opencontainers.image.description=Bun v${{ steps.version.outputs.version }} runtime on Debian
+            org.opencontainers.image.version=${{ steps.version.outputs.version }}
 
-      - name: Build and push Docker image
+      - name: Build and push
         uses: docker/build-push-action@v5
         with:
           context: ./images/bun-debian
