--- a/images/bun-debian/package.json
+++ b/images/bun-debian/package.json
@@ -1,6 +1,11 @@
 {
   "name": "@tpl/bun",
-  "version": "1.2.5",
+  "version": "1.2.4",
   "private": true,
-  "type": "module"
+  "type": "module",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com",
+    "access": "restricted",
+    "directory": "."
+  }
 }
