--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "format": "prettier --write .",
     "changeset": "changeset",
     "version": "changeset version",
-    "release": "changeset publish"
+    "release": "changeset publish --tag",
+    "create-tag": "bun run scripts/create-tag.ts"
   },
   "packageManager": "bun@1.2.5",
   "devDependencies": {
