--- a/.github/workflows/publish-bun-debian.yml
+++ b/.github/workflows/publish-bun-debian.yml
@@ -3,7 +3,7 @@ name: Publish Docker Image - bun-debian
 on:
   push:
     tags:
-      - '@tpl/bun@*'
+      - '@tpl/bun-debian@*'
 
 env:
   REGISTRY: ghcr.io
@@ -25,7 +25,7 @@ jobs:
         run: |
           TAG=${{ github.ref_name }}
           # Extract version using regex pattern matching
-          if [[ $TAG =~ @tpl/bun@([0-9]+\.[0-9]+\.[0-9]+.*)$ ]]; then
+          if [[ $TAG =~ @tpl/bun-debian@([0-9]+\.[0-9]+\.[0-9]+.*)$ ]]; then
             VERSION="${BASH_REMATCH[1]}"
             echo "version=$VERSION" >> $GITHUB_OUTPUT
             echo "::notice::Successfully extracted version: $VERSION"
