--- a/.github/workflows/publish-bun-debian.yml
+++ b/.github/workflows/publish-bun-debian.yml
@@ -4,9 +4,15 @@ on:
   push:
     tags:
       - '@tpl/bun-debian@*'
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Bun version to publish'
+        required: true
 
 env:
   REGISTRY: ghcr.io
+  IMAGE_NAME: bun
 
 jobs:
   publish:
@@ -23,16 +29,9 @@ jobs:
       - name: Extract version
         id: version
         run: |
-          TAG=${{ github.ref_name }}
-          # Extract version using regex pattern matching
-          if [[ $TAG =~ @tpl/bun-debian@([0-9]+\.[0-9]+\.[0-9]+.*)$ ]]; then
-            VERSION="${BASH_REMATCH[1]}"
-            echo "version=$VERSION" >> $GITHUB_OUTPUT
-            echo "::notice::Successfully extracted version: $VERSION"
-          else
-            echo "::error::Failed to extract version from tag: $TAG"
-            exit 1
-          fi
+          # Simplified version extraction
+          echo "version=${GITHUB_REF_NAME#@tpl/bun-debian@}" >> $GITHUB_OUTPUT
+          echo "::notice::Extracted version: ${GITHUB_REF_NAME#@tpl/bun-debian@}"
 
       - name: Login to Registry
         uses: docker/login-action@v3
@@ -45,7 +44,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/${{ github.actor }}/bun
+          images: ${{ env.REGISTRY }}/${{ github.actor }}/${{ env.IMAGE_NAME }}
           tags: |
             type=raw,value=${{ steps.version.outputs.version }}
             type=raw,value=latest
