ci(release): refine tag creation script by removing prefix parameter

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,8 +46,8 @@ jobs:
       - name: Create Tag
         id: tag_creation
         run: |
-          # Pass a prefix parameter to your tag creation script
-          TAG_OUTPUT=$(bun run create-tag --prefix "@tpl/bun-debian@" ${{ github.event.inputs.force_tag == true && '--force' || '' }})
+          # Run tag creation script and capture output
+          TAG_OUTPUT=$(bun run create-tag ${{ github.event.inputs.force_tag == true && '--force' || '' }})
           echo "$TAG_OUTPUT"
           
           # Parse the output for the tag name (assumes the script outputs "Creating tag: TAG_NAME")
