--- a/.github/workflows/publish-bun-debian.yml
+++ b/.github/workflows/publish-bun-debian.yml
@@ -29,9 +29,13 @@ jobs:
       - name: Extract version
         id: version
         run: |
-          # Simplified version extraction
-          echo "version=${GITHUB_REF_NAME#bun-debian@}" >> $GITHUB_OUTPUT
-          echo "::notice::Extracted version: ${GITHUB_REF_NAME#bun-debian@}"
+          if [ -n "${{ github.event.inputs.version }}" ]; then
+            VERSION="${{ github.event.inputs.version }}"
+          else
+            VERSION="${GITHUB_REF_NAME#bun-debian@}"
+          fi
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "::notice::Using version: $VERSION"
 
       - name: Login to Registry
         uses: docker/login-action@v3
@@ -46,8 +50,8 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ github.actor }}/${{ env.IMAGE_NAME }}
           tags: |
-            type=raw,value=${{ steps.version.outputs.version }}
-            type=raw,value=latest
+            type=raw,value=${{ steps.version.outputs.version }}-debian
+            type=raw,value=latest-debian
           labels: |
             org.opencontainers.image.title=Bun on Debian
             org.opencontainers.image.description=Bun v${{ steps.version.outputs.version }} runtime on Debian
